oke/native-ingress-controller/ingress-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-1
  name: nginx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - image: docker.io/library/nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-2
  name: nginx-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - image: docker.io/library/nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-1
  name: nginx-1
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-2
  name: nginx-2
spec:
  ports:
  - name: 80-81
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-2
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    oci-native-ingress.oraclecloud.com/healthcheck-port: "80"
spec:
    ingressClassName: ic
    rules:
    - http:
        paths:
        - path: /test
          pathType: Prefix
          backend:
           service:
            name: nginx-1
            port:
              number: 80
        - path: /sample
          pathType: Prefix
          backend:
           service:
            name: nginx-2
            port:
              number: 80
    defaultBackend:
      service:
        name: nginx-1
        port:
          number: 80
